--- a/index.css
+++ b/index.css
@@ -1,10 +1,24 @@
-body {
-	background: url(back.jpg);
+body
+{
+    background: url(back.jpg);
+    margin: auto;
+}
+	
+div
+{
+    columns: 200px 4;
+    column-span: all;
+    column-rule: 2px solid;
 }
 
-div {
-	column-count: 4;
-	column-span: all;
-	column-width: 200px;
-	column-rule: 2px solid;
+.image2
+{
+    width: 450px;
+    height: 250px;
+}
+
+.image
+{
+    width: 450px;
+    height: 600px;
 }
